minor updates portfolio card added

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -92,6 +92,9 @@
     cursor: pointer;
     transition: color 0.5s
 }
+.social a {
+    color: white
+}
 .social #youtube {
     transition: color 0.5s
 }
